--- a/src/styles/Community.module.css
+++ b/src/styles/Community.module.css
@@ -39,6 +39,13 @@
   clip-path: polygon(0 0, 100% 0, 85% 100%, 0 100%);
 }
 
+.communityDetailName {
+  font-weight: 600;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  background-color: #aae3e250;
+}
+
 
 /* Background Effect for Community Name */
 /* .communityOverviewName::before {
